# npconcat

./: .gitignore  Cargo.toml  README.md  concat6_flamegraph.html  pyproject.toml  requirements.txt
examples/: example.py  fastconcat.py
src/: lib.rs
