[package]
name = "npconcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "npconcat"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.17.0"
numpy = "0.17.0"
list_comprehension_macro = "0.1.1"
rayon = "1.5.0"
concat-string = "1.0.1"
flame = "0.1"